--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -6,7 +6,7 @@ on:
       - main
 
 jobs:
-  build:
+  build-and-test:
     runs-on: ubuntu-latest
 
     steps:
@@ -29,6 +29,14 @@ jobs:
         docker-compose up -d
         docker-compose exec -T app sh -c "pip install --no-cache-dir -r requirements.txt && pytest"
         docker-compose down
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build-and-test  # This ensures that the deploy job runs only if build-and-test is successful
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v2
 
     - name: Add SSH key
       run: |
