--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,13 +2,10 @@ version: '3.8'
 
 services:
   app:
-    image: python:3.8-slim
+    build: .
     container_name: fastapi_app
     volumes:
       - .:/app
-    working_dir: /app
-    command: >
-      sh -c "pip install --no-cache-dir -r requirements.txt && gunicorn -w 2 -k uvicorn.workers.UvicornWorker main:app --bind 0.0.0.0:8000"
     ports:
       - "8000:8000"
-    mem_limit: 512m
+    mem_limit: 512m  # Limite de mémoire
