--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,4 +8,12 @@ services:
       - .:/app
     ports:
       - "8000:8000"
-    mem_limit: 1g
+    mem_limit: 2g
+    deploy:
+      resources:
+        limits:
+          cpus: "0.5"
+          memory: 2g
+        reservations:
+          cpus: "0.25"
+          memory: 1g
