--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -27,6 +27,7 @@ jobs:
     - name: Build and run tests
       run: |
         docker-compose up --build -d
+        docker stats --no-stream
         docker-compose exec -T app sh -c "pytest"
         docker-compose down
 
