--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -28,8 +28,9 @@ jobs:
       run: |
         docker-compose up --build -d
         docker stats --no-stream
-        docker-compose exec -T app sh -c "pytest"
-        docker-compose down
+        docker-compose logs app  # Add this line to get logs from the app container
+        docker-compose exec -T app sh -c "pytest > pytest_output.log 2>&1"
+        cat pytest_output.log  # Display the content of the pytest log file
 
   deploy:
     runs-on: ubuntu-latest
