--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -25,6 +25,11 @@ jobs:
           ${{ runner.os }}-buildx-
 
     - name: Build and run tests
+      env:
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        AWS_S3_BUCKET_NAME: ${{ secrets.AWS_S3_BUCKET_NAME }}
+        AWS_REGION: ${{ secrets.AWS_REGION }}
       run: |
         docker-compose up --build -d
         docker stats --no-stream
@@ -47,12 +52,12 @@ jobs:
 
     - name: Deploy to EC2
       if: github.ref == 'refs/heads/main'
+      env:
+        EC2_HOST: ${{ secrets.EC2_HOST }}
+        EC2_SSH_KEY: ${{ secrets.EC2_SSH_KEY }}
       run: |
         ssh -o StrictHostKeyChecking=no -i key.pem ec2-user@${{ secrets.EC2_HOST }} << EOF
           cd /home/ec2-user/fastapi-template
           git pull
           docker-compose up -d --build
         EOF
-      env:
-        EC2_HOST: ${{ secrets.EC2_HOST }}
-        EC2_SSH_KEY: ${{ secrets.EC2_SSH_KEY }}
