--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -35,7 +35,7 @@ jobs:
         docker stats --no-stream
         docker-compose logs app  # Add this line to get logs from the app container
         docker-compose exec -T app sh -c "pytest > pytest_output.log 2>&1"
-        cat pytest_output.log  # Display the content of the pytest log file
+        cat pytest_output.log
 
   deploy:
     runs-on: ubuntu-latest
